# fast_api

./: .coverage  .gitignore  Dockerfile  alembic.ini  database.db  pyproject.toml
.github/workflows/: pipeline.yaml
fast_api/: app.py  database.py  models.py  schemas.py  security.py
migrations/: env.py
migrations/versions/: 35c0e1d9733e_create_todos_table.py  55405e25f21e_create_user_table.py
routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_fast_api.py  test_security.py  test_todos.py  test_users.py
