[tool.poetry]
name = "fast_api"
version = "0.1.0"
description = ""
authors = ["Royal Pandalfuul <ga7w7arcanjo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
pydantic = {extras = ["email"], version = "^2.0.3"}
pydentic = {extras = ["email"], version = "^0.0.1-alpha.3"}
SQLAlchemy = "^2.0.19"
pydantic-settings = "^2.0.2"
alembic = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^4.1.0"
taskipy = "^1.11.0"
blue = "^0.9.1"
ruff = "^0.0.279"
httpx = "^0.24.1"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
pythonpath = "."

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue . && isort .'
run = 'uvicorn fast_api.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_api -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
